[gd_scene load_steps=9 format=3 uid="uid://yxdjupmyo3t5"]

[ext_resource type="Script" path="res://scripts/ui/hud/player_variable.gd" id="1_3q67q"]
[ext_resource type="Texture2D" uid="uid://yyucri88rf6y" path="res://texture/ui/hud/player_variable/player_variable_bar.png" id="2_xdn0j"]
[ext_resource type="Texture2D" uid="uid://bw04h43b37ct4" path="res://texture/ui/hud/player_variable/money.png" id="3_ws3oc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ludgh"]
atlas = ExtResource("2_xdn0j")
region = Rect2(0, 32, 320, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qroae"]
atlas = ExtResource("2_xdn0j")
region = Rect2(0, 0, 320, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7hy1"]
atlas = ExtResource("2_xdn0j")
region = Rect2(0, 64, 320, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eibq4"]
atlas = ExtResource("2_xdn0j")
region = Rect2(0, 96, 320, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs70d"]
atlas = ExtResource("2_xdn0j")
region = Rect2(0, 128, 320, 32)

[node name="PlayerVariable" type="CanvasLayer"]
script = ExtResource("1_3q67q")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_right = 320.0
offset_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthBar" type="TextureProgressBar" parent="VBoxContainer2"]
layout_mode = 2
value = 36.0
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_progress = SubResource("AtlasTexture_ludgh")

[node name="Label" type="Label" parent="VBoxContainer2/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "23"
horizontal_alignment = 1

[node name="EasedHealthBar" type="TextureProgressBar" parent="VBoxContainer2/HealthBar"]
show_behind_parent = true
clip_children = 2
layout_mode = 0
value = 53.0
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = SubResource("AtlasTexture_qroae")
texture_progress = SubResource("AtlasTexture_v7hy1")

[node name="EnduranceBar" type="TextureProgressBar" parent="VBoxContainer2"]
show_behind_parent = true
layout_mode = 2
value = 73.0
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_progress = SubResource("AtlasTexture_eibq4")

[node name="Label" type="Label" parent="VBoxContainer2/EnduranceBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "67"
horizontal_alignment = 1

[node name="EasedEnduranceBar" type="TextureProgressBar" parent="VBoxContainer2/EnduranceBar"]
show_behind_parent = true
clip_children = 2
layout_mode = 0
value = 100.0
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = SubResource("AtlasTexture_qroae")
texture_progress = SubResource("AtlasTexture_fs70d")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10

[node name="Money" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/VBoxContainer/Money"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_ws3oc")

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer/Money"]
layout_mode = 2
text = "250"
